--- a/pages/event/committees.html
+++ b/pages/event/committees.html
@@ -191,12 +191,12 @@
           <col width="220">
             <col width="400">
               <tr>
-                <td>Abdelhak Mahmoudi</td>
-                <td> Mohammed V University, Morocco</td>
+                <td>Abdelaziz Berrado</td>
+                <td>Ecole Mohammedia d'Ingenieurs, Morocco</td>
               </tr>
               <tr>
-                <td>Abdelaziz Berrado</td>
-                <td> EMI, Morocco</td>
+                <td>Abdelhak Mahmoudi</td>
+                <td>Mohammed V University, Morocco</td>
               </tr>
               <tr>
                 <td>Abdellah Adib</td>
