--- a/pages/event/committees.html
+++ b/pages/event/committees.html
@@ -281,7 +281,7 @@
                 <td>Mohammed V University, Morocco </td>
               </tr>
               <tr>
-                <td>Khalifa elmansouri </td>
+                <td>Khalifa Elmansouri </td>
                 <td>UM6SS, Morocco </td>
               </tr>  
               <tr>
