--- a/pages/application.html
+++ b/pages/application.html
@@ -160,7 +160,7 @@
                     <h3>
                       Call for 3MT
                     </h3>
-                    <p>PhD student working on machine learning are given 3 minutes to present their thesis to a specialized audience.</p>
+                    <p>PhD students working on machine learning are given 3 minutes to present their thesis to a specialized audience.</p>
                 </div></center>
                   <div class="section-content">
                     <center>
@@ -208,7 +208,7 @@
                         <h3>
                         Call for Tutorials
                         </h3>
-                        <p>ML professors and specilists are called to propose lectures or interactive workshops to the attendees.</p>
+                        <p>ML professors and experts are called to propose lectures or interactive workshops to the attendees.</p>
                     </center>
                   </div>
                   <div class="section-content">
