--- a/pages/event/committees.html
+++ b/pages/event/committees.html
@@ -289,7 +289,7 @@
                 <td>Mohammed V University, Morocco </td>
               </tr> 
               <tr>
-                <td>Loubna Benabou</td>
+                <td>Loubna Benabbou</td>
                 <td>UQAR, Canada </td>
               </tr>    	  
               <tr>
