--- a/pages/event/committees.html
+++ b/pages/event/committees.html
@@ -321,6 +321,10 @@
                 <td>Hassan II University, Morocco </td>
               </tr>
               <tr>
+                <td>Naoual Berbiche</td>
+                <td>Mohammed V University, Morocco </td>
+              </tr>            
+              <tr>
                 <td>Noureddine Idboufker</td>
                 <td>Caddi Ayad University, Morocco </td>
               </tr>
