--- a/pages/calls/papers.html
+++ b/pages/calls/papers.html
@@ -199,7 +199,7 @@
                         <h3>Submission guidelines</h3>
             
                         <p>
-                          We also welcome position papers and demos related to these areas.
+                          We also welcome position papers related to these areas.
                           Work may be previously published, completed, or ongoing.
                           Submissions will be peer-reviewed by at least 2 reviewers in the
                           area. The workshop will not publish proceedings. We encourage
