--- a/index.html
+++ b/index.html
@@ -206,40 +206,40 @@
                   <section id="schedule" class="section-with-bg">
                       <div class="container wow fadeInUp">
                         <div class="section-header">
-                          <h2>Important dates</h2>
+                          <h2>Deadlines</h2>
                         </div>
                         <div class="tab-content row justify-content-center">
                           <!-- Schdule Day 1 -->
                           <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
                 
                               <div class="row schedule-item">
-                                  <div class="col-md-5"><time>February  28, 2019</time></div>
+                                  <div class="col-md-5"><time>March 10, 2019</time></div>
                                   <div class="col-md-7">
-                                      <h4>Submission deadline</h4>
+                                      <h4>Call for Papers</h4>
                                     <p> </p>
                                   </div>
                                </div>
 
                             <div class="row schedule-item">
-                                <div class="col-md-5"><time>March 17, 2019</time></div>
+                                <div class="col-md-5"><time>March 24, 2019</time></div>
                                 <div class="col-md-7">
-                                  <h4>Acceptance notification</h4>
+                                  <h4>Call for 3MT</h4>
                                   <p> </p>
                                 </div>
                              </div>
 
                              <div class="row schedule-item">
-                                <div class="col-md-5"><time>March 31, 2019</time></div>
+                                <div class="col-md-5"><time>TBA</time></div>
                                 <div class="col-md-7">
-                                  <h4>Registration due</h4>
+                                  <h4>Call for Demos</h4>
                                   <p> </p>
                                 </div>
                              </div>
 
                              <div class="row schedule-item">
-                                <div class="col-md-5"><time>April 29-30, 2019</time></div>
+                                <div class="col-md-5"><time>TBA</time></div>
                                 <div class="col-md-7">
-                                  <h4>Event</h4>
+                                  <h4>Call for Data Challenge</h4>
                                   <p> </p>
                                 </div>
                              </div>
