--- a/pages/calls/tutorials.html
+++ b/pages/calls/tutorials.html
@@ -190,8 +190,8 @@
                     <h2>
                       <a
                         href="https://goo.gl/forms/R9da5M5hb0rodCm22"
-                        class="btn btn-outline-primary btn-lg"
-                        >Propose a Tutorial</a
+                        class="btn btn-outline-primary btn-lg" disabled
+                        >Propose a Tutorial (Closed)</a
                       >
                     </h2>
                   </div>
@@ -220,7 +220,7 @@
                            </div>
 
                            <div class="row schedule-item">
-                              <div class="col-md-5"><time><h6>March 31, 2019</h6></time></div>
+                              <div class="col-md-5"><time><h6>April 14, 2019</h6></time></div>
                               <div class="col-md-7">
                                 <h6><b>Registration due</b></h6>
                                 <p> </p>
