--- a/pages/calls/tutorials.html
+++ b/pages/calls/tutorials.html
@@ -189,9 +189,9 @@
                   <div class="section-header">
                     <h2>
                       <a
-                        href="https://goo.gl/forms/R9da5M5hb0rodCm22"
-                        class="btn btn-outline-primary btn-lg" disabled
-                        >Propose a Tutorial (Closed)</a
+                        href="#"
+                        class="btn btn-outline-primary btn-lg"
+                        ><strike>Propose a Tutorial</strike></a
                       >
                     </h2>
                   </div>
