--- a/pages/calls/papers.html
+++ b/pages/calls/papers.html
@@ -213,7 +213,7 @@
                           >. Here is an example of a 
                           
                           <a
-                            href="../sample.pdf"
+                            href="./sample_paper.pdf"
                             >2 pages research paper </a
                           >
                           
