--- a/index.html
+++ b/index.html
@@ -212,7 +212,15 @@
                           <!-- Schdule Day 1 -->
                           <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
                 
-                              <div class="row schedule-item">
+                            <div class="row schedule-item">
+                                  <div class="col-md-5"><time><strike>February 28, 2019</strike></time></div>
+                                  <div class="col-md-7">
+                                      <h4><strike>Call for Tutorials</strike></h4>
+                                    <p> </p>
+                                  </div>
+                               </div>  
+                            
+                            <div class="row schedule-item">
                                   <div class="col-md-5"><time>March 10, 2019</time></div>
                                   <div class="col-md-7">
                                       <h4>Call for Papers</h4>
