--- a/pages/calls/papers.html
+++ b/pages/calls/papers.html
@@ -208,8 +208,8 @@
                         <p>
                           All submissions must be in PDF format. All papers should follow 
                           <a
-                            href="https://nips.cc/Conferences/2018/PaperInformation/StyleFiles"
-                            >Latex or word templaes </a
+                            href="https://nips.cc/Conferences/2015/PaperInformation/StyleFiles"
+                            >Latex or word templates</a
                           >. Here is an example of a 
                           
                           <a
