--- a/pages/calls/3mt.html
+++ b/pages/calls/3mt.html
@@ -135,7 +135,7 @@
                 <div class="container wow fadeInUp">
                   <div class="section-content">
                       <p>
-                          If you are devoting or have devoted 3 or more years to your PhD,
+                          If you are devoting or have devoted 2 or more years to your PhD,
                           you could devote 3 minutes to explain it to a more general public,
                           we challenge you!!
                         </p>
@@ -170,6 +170,11 @@
                             </li>
                             <li>The thesis subject should be related to the event topic</li>
                         </ul>
+                        </p>
+                  
+                        <p>
+                          Here is an example of a 3MT presentation from youtube:
+                              <iframe width="702" height="392" src="https://www.youtube.com/embed/FaFeqYCx8hE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </p>
                         
                   </div>
