--- a/pages/event/keynotes-halima.html
+++ b/pages/event/keynotes-halima.html
@@ -126,7 +126,7 @@
       <section id="keynotes" class="wow fadeInUp">
         <div class="container">
           <div class="section-header">
-            <h2>Keynotes</h2>
+            <h2>Keynote Speakers</h2>
           </div>
           <br />
 
