--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             </div>
             <div class="col-lg-3">
               <div class="sponsor-logo">
-                <img src="img/sponsors/uh2c-fst.png" class="img-fluid" alt="" />
+                <img src="img/sponsors/logo-itinnov.png" class="img-fluid" alt="" />
               </div>
             </div>
             <div class="col-lg-3">
