--- a/pages/event/keynotes.html
+++ b/pages/event/keynotes.html
@@ -198,8 +198,7 @@
                   Mathematics (Stochastic analysis ) at the University of
                   Amsterdam. He serves as a R&D Engineer at the Dutch National
                   Aerospace, and was active member of the European Big Data
-                  Value Association (BVDA). Hicham is happy to join this event
-                  ;-)
+                  Value Association (BVDA).
                 </p>
               </div>
             </div>
