--- a/pages/event/keynotes.html
+++ b/pages/event/keynotes.html
@@ -140,7 +140,8 @@
             </div>
             <div class="col-md-9">
               <div class="details">
-                <h2>Halima Bensmail</h2>
+                <h1>Halima Bensmail</h1>
+                <h2>Qatar Computing research institute (QCRI)</h2>
                 <p>
                   Dr. Halima Bensmail is a principal scientist at Qatar
                   Computing research institute (QCRI) and a joint Full Professor
@@ -182,7 +183,9 @@
             </div>
             <div class="col-md-9">
               <div class="details">
-                <h2>Hicham Zmarrou</h2>
+                <h1>Hicham Zmarrou</h1>
+                <h2>ABN-AMRO bank in The Netherlands</h2>
+
                 <p>
                   Dr. Hicham Zmarrou is a Data Science Tribe Lead at ABN-AMRO
                   bank in The Netherlands. Hicham’s Works responsibilities are
@@ -198,7 +201,8 @@
                   Mathematics (Stochastic analysis ) at the University of
                   Amsterdam. He serves as a R&D Engineer at the Dutch National
                   Aerospace, and was active member of the European Big Data
-                  Value Association (BVDA).
+                  Value Association (BVDA). Hicham is happy to join this event
+                  ;-)
                 </p>
               </div>
             </div>
@@ -214,7 +218,8 @@
             </div>
             <div class="col-md-9">
               <div class="details">
-                <h2>Loubna Benabbou</h2>
+                <h1>Loubna Benabbou</h1>
+                <h2>Université du Québec à Rimouski (UQAR)</h2>
                 <p>
                   Dr. Loubna Benabbou is a Professor of Management Sciences at
                   Université du Québec à Rimouski (UQAR) at Lèvis campus. Her
