--- a/pages/event/keynotes.html
+++ b/pages/event/keynotes.html
@@ -141,7 +141,7 @@
             <div class="col-md-9">
               <div class="details">
                 <h1>Halima Bensmail</h1>
-                <h2>Qatar Computing research institute (QCRI)</h2>
+                <h2>Qatar Computing Research Institute (QCRI), Qatar</h2>
                 <p>
                   Dr. Halima Bensmail is a principal scientist at Qatar
                   Computing research institute (QCRI) and a joint Full Professor
@@ -184,7 +184,7 @@
             <div class="col-md-9">
               <div class="details">
                 <h1>Hicham Zmarrou</h1>
-                <h2>ABN-AMRO bank in The Netherlands</h2>
+                <h2>ABN-AMRO bank, Netherlands</h2>
 
                 <p>
                   Dr. Hicham Zmarrou is a Data Science Tribe Lead at ABN-AMRO
@@ -219,7 +219,7 @@
             <div class="col-md-9">
               <div class="details">
                 <h1>Loubna Benabbou</h1>
-                <h2>Université du Québec à Rimouski (UQAR)</h2>
+                <h2>Université du Québec à Rimouski (UQAR), Canada</h2>
                 <p>
                   Dr. Loubna Benabbou is a Professor of Management Sciences at
                   Université du Québec à Rimouski (UQAR) at Lèvis campus. Her
