--- a/pages/event/keynotes.html
+++ b/pages/event/keynotes.html
@@ -184,7 +184,7 @@
             <div class="col-md-9">
               <div class="details">
                 <h1>Hicham Zmarrou</h1>
-                <h2>ABN-AMRO bank, Netherlands</h2>
+                <h2>ABN-AMRO Bank, Netherlands</h2>
 
                 <p>
                   Dr. Hicham Zmarrou is a Data Science Tribe Lead at ABN-AMRO
@@ -201,8 +201,7 @@
                   Mathematics (Stochastic analysis ) at the University of
                   Amsterdam. He serves as a R&D Engineer at the Dutch National
                   Aerospace, and was active member of the European Big Data
-                  Value Association (BVDA). Hicham is happy to join this event
-                  ;-)
+                  Value Association (BVDA).
                 </p>
               </div>
             </div>
