--- a/index.html
+++ b/index.html
@@ -186,7 +186,32 @@
                               </div>
                               <div class="news-content">
                                 <p> Announcement of the keynote and speakers. </p>
-                                <p> Announcement of the keynote and speakers. </p>
+                                <p> 
+                                  <a href="./pages/event/keynotes.html">  
+                                  <img
+                                    class="rounded-circle"
+                                    width="60"
+                                    src="./img/speakers/halima.jpg"
+                                    alt="Halima Bensmail"
+                                  />  
+                                </a>
+                                <a href="./pages/event/keynotes.html"> 
+                                  <img
+                                    class="rounded-circle"
+                                    width="60"
+                                    src="./img/speakers/hicham.jpeg"
+                                    alt="Halima Bensmail"
+                                  /> 
+                                </a>
+                                  <a href="./pages/event/keynotes.html"> 
+                                  <img
+                                    class="rounded-circle"
+                                    width="60"
+                                    src="./img/speakers/loubna.jpg"
+                                    alt="Halima Bensmail"
+                                  /> 
+                                </a>
+                                </p>
                               </div>
                           </div>  
                           
