--- a/index.html
+++ b/index.html
@@ -179,13 +179,12 @@
                           
                           <div>
                               <div class="news-header">
-                                  <h4>Deadline Extended</h4>
+                                  <h4>Announcement of our keynote speakers</h4>
                                 <p class="date-author">
                                 March 7, 2019 
                                 </p>
                               </div>
                               <div class="news-content">
-                                <p> Announcement of the keynote and speakers. </p>
                                 <p> 
                                   <a href="./pages/event/keynotes.html">  
                                   <img
@@ -217,7 +216,7 @@
                           
                           <div>
                               <div class="news-header">
-                                  <h4>Deadline Extended</h4>
+                                  <h4>Deadline extended</h4>
                                 <p class="date-author">
                                 February 28, 2019 
                                 </p>
