--- a/pages/event/committees.html
+++ b/pages/event/committees.html
@@ -260,6 +260,10 @@
                 <td>Sultan Moulay Slimane University, Morocco </td>
               </tr>
               <tr>
+                <td>Hind Lamharhar</td>
+                <td> Mohammed V University, Morocco </td>
+              </tr> 
+              <tr>
                 <td>Ibtissam Benmiloud</td>
                 <td> MINES-Rabat, Morocco</td>
               </tr>
@@ -267,10 +271,6 @@
                 <td>Jihad Zahir</td>
                 <td>Caddi Ayad University, Morocco </td>
               </tr>
-              <tr>
-                <td>Karim Benzidane</td>
-                <td> Hassan II University, Morocco </td>
-              </tr> 
               <tr>
                 <td>Khalid El Baamrani</td>
                 <td>Caddi Ayad University, Morocco </td>
