--- a/pages/event/keynotes.html
+++ b/pages/event/keynotes.html
@@ -188,7 +188,7 @@
 
                 <p>
                   Dr. Hicham Zmarrou is a Data Science Tribe Lead at ABN-AMRO
-                  bank in The Netherlands. Hicham’s Works responsibilities are
+                  bank in The Netherlands. Hicham’s responsibilities are
                   ,among others, providing analytical support for the
                   conceptualization, development, and implementation of
                   multiple, inter–linked Machine Learning projects, mentoring
