--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                             <div class="row schedule-item">
                                   <div class="col-md-5"><time>March 10, 2019</time></div>
                                   <div class="col-md-7">
-                                      <h4>Call for Papers</h4>
+                                    <h4><strike>Call for Papers</strike></h4>
                                     <p> </p>
                                   </div>
                                </div>
