--- a/pages/calls/papers.html
+++ b/pages/calls/papers.html
@@ -243,9 +243,9 @@
                   <div class="section-header">
                     <h2>
                       <a
-                        href="https://goo.gl/forms/44gmCWrs50ORGclF3"
+                        href="#"
                         class="btn btn-outline-primary btn-lg"
-                        >Submit a Paper</a
+                        >Closed</a
                       >
                     </h2>
                   </div>
