--- a/pages/calls/papers.html
+++ b/pages/calls/papers.html
@@ -245,7 +245,7 @@
                       <a
                         href="#"
                         class="btn btn-outline-primary btn-lg"
-                        >Closed</a
+                        ><strike>Call for Papers</strike></a
                       >
                     </h2>
                   </div>
