--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                                </div>  
                             
                             <div class="row schedule-item">
-                                  <div class="col-md-5"><time>March 10, 2019</time></div>
+                                  <div class="col-md-5"><time><strike>March 10, 2019</strike></time></div>
                                   <div class="col-md-7">
                                     <h4><strike>Call for Papers</strike></h4>
                                     <p> </p>
