--- a/pages/event/tutorials.html
+++ b/pages/event/tutorials.html
@@ -254,7 +254,7 @@
                 </div>
                 <div class="col-md-9">
                   <h4>
-                    Apercu sur les approches d'interprétabilité des modèles du
+                    Aperçu sur les approches d'interprétabilité des modèles du
                     Deep Learning
                   </h4>
                   <p>
