--- a/index.html
+++ b/index.html
@@ -390,8 +390,8 @@
 
               <strong>Email:</strong> indabaXmorocco@gmail.com<br>
                 <a href="https://twitter.com/indabaXmorocco" class="twitter"><i class="fa fa-twitter"></i></a>
-                <!--<a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
+                <a href="#" class="https://www.facebook.com/IndabaXMorocco-372699740233783/"><i class="fa fa-facebook"></i></a>
+                <!--<a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
                 <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
                 <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>-->
               </p>
