--- a/pages/contact.html
+++ b/pages/contact.html
@@ -166,6 +166,7 @@
                   <a href="https://twitter.com/indabaXmorocco" class="twitter"
                     ><i class="fa fa-twitter"></i
                   ></a>
+                  <a href="https://www.facebook.com/IndabaXMorocco-372699740233783/" class="twitter"><i class="fa fa-facebook"></i></a>
                   <!--<a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
                   <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
                   <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
