--- a/pages/calls/demos.html
+++ b/pages/calls/demos.html
@@ -161,7 +161,7 @@
                   <div class="section-header">
                     <h2>
                       <a
-                        href="https://goo.gl/forms/YQxprQZ6lNxahFlg2"
+                        href="https://forms.gle/CuHP9Q8uafpsN9Nn8"
                         class="btn btn-outline-primary btn-lg"
                         >Submit a Demo</a
                       >
