--- a/pages/calls/3mt.html
+++ b/pages/calls/3mt.html
@@ -99,6 +99,7 @@
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="papers.html">Call for papers</a>
                 <a class="dropdown-item active" href="#">Call for 3MT</a>
+                <a class="dropdown-item" href="demos.html">Call for Demos</a>
                 <a class="dropdown-item" href="dataChallenge.html"
                   >Call for Data challenge</a
                 >
