--- a/pages/calls/demos.html
+++ b/pages/calls/demos.html
@@ -99,7 +99,7 @@
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="papers.html">Call for papers</a>
                 <a class="dropdown-item" href="3mt.html">Call for 3MT</a>
-                <a class="dropdown-item active" href="demos.html">Call for Demos</a>
+                <a class="dropdown-item active" href="#">Call for Demos</a>
                 
                 <a class="dropdown-item" href="dataChallenge.html"
                   >Call for Data challenge</a
