--- a/pages/event/keynotes.html
+++ b/pages/event/keynotes.html
@@ -98,6 +98,7 @@
                 <a class="dropdown-item" href="../calls/3mt.html"
                   >Call for 3MT</a
                 >
+                <a class="dropdown-item"  href="./calls/demos.html">Call for Demos</a>
                 <a class="dropdown-item" href="../calls/dataChallenge.html"
                   >Call for Data challenge</a
                 >
