--- a/pages/application.html
+++ b/pages/application.html
@@ -98,6 +98,7 @@
                   >Call for papers</a
                 >
                 <a class="dropdown-item" href="calls/3mt.html">Call for 3MT</a>
+                <a class="dropdown-item"  href="calls/demos.html">Call for Demos</a>
                 <a class="dropdown-item" href="calls/dataChallenge.html"
                   >Call for Data challenge</a
                 >
