--- a/pages/contact.html
+++ b/pages/contact.html
@@ -72,6 +72,7 @@
               <div class="dropdown-menu">
                   <a class="dropdown-item"  href="calls/papers.html">Call for papers</a>
                   <a class="dropdown-item"  href="calls/3mt.html">Call for 3MT</a>
+                  <a class="dropdown-item"  href="calls/demos.html">Call for Demos</a>
                   <a class="dropdown-item"  href="calls/dataChallenge.html">Call for Data challenge</a>
                   <a class="dropdown-item"  href="calls/tutorials.html">Call for Tutorials</a>
               </div>
