--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <div class="dropdown-menu">
                   <a class="dropdown-item"  href="pages/calls/papers.html">Call for papers</a>
                   <a class="dropdown-item"  href="pages/calls/3mt.html">Call for 3MT</a>
-                  <a class="dropdown-item"  href="calls/demos.html">Call for Demos</a>
+                  <a class="dropdown-item"  href="pages/calls/demos.html">Call for Demos</a>
                   <a class="dropdown-item"  href="pages/calls/dataChallenge.html">Call for Data challenge</a>
                   <a class="dropdown-item"  href="pages/calls/tutorials.html">Call for Tutorials</a>
               </div>
