--- a/pages/calls/demos.html
+++ b/pages/calls/demos.html
@@ -82,7 +82,7 @@
                 <a class="dropdown-item" href="../event/tutorials.html"
                   >Tutorials</a
                 >
-                <a class="dropdown-item" href="../event/awards.html">Awards</a>
+                <a class="dropdown-item" href="../event/Awards.html">Awards</a>
               </div>
             </li>
             <li class="dropdown menu-active">
