--- a/pages/application.html
+++ b/pages/application.html
@@ -207,15 +207,15 @@
                   <div class="section-header">
                     <center>
                         <h3>
-                        Call for Tutorials
+                        Call for Demos
                         </h3>
-                        <p>ML professors and experts are called to propose lectures or interactive workshops to the attendees.</p>
+                        <p>Whether you are an engineering school graduate or still a MSc or Eng. student, this call is for you.</p>                       
                     </center>
                   </div>
                   <div class="section-content">
                     <center>
                       <a
-                        href="./calls/tutorials.html"
+                        href="./calls/demos.html"
                         class="btn btn-outline-primary btn-lg"
                         >GO</a
                       >
