--- a/pages/application.html
+++ b/pages/application.html
@@ -209,7 +209,7 @@
                         <h3>
                         Call for Demos
                         </h3>
-                        <p>Whether you are an engineering school graduate or still a MSc or Eng. student, this call is for you.</p>                       
+                        <p>Whether you are graduate or still student working on ML, come and share your demo.</p>                       
                     </center>
                   </div>
                   <div class="section-content">
