--- a/index.html
+++ b/index.html
@@ -334,22 +334,27 @@
             <h2>Sponsors</h2>
           </div>
           <div class="row">
-            <div class="col-lg-3">
+            <div class="col-lg-2">
               <div class="sponsor-logo">
                 <img src="img/sponsors/uh2c-fst.png" class="img-fluid" alt="" />
               </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-2">
+              <div class="sponsor-logo">
+                <img src="img/sponsors/QCRI.png" class="img-fluid" alt="" />
+              </div>
+            </div>
+            <div class="col-lg-2">
               <div class="sponsor-logo">
                 <img src="img/sponsors/logo-itinnov.png" class="img-fluid" alt="" />
               </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-2">
               <div class="sponsor-logo">
                 <img src="img/sponsors/indaba-black.png" class="img-fluid" alt="" />
               </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-2">
               <div class="sponsor-logo">
                 <img src="img/sponsors/cnrst.png" class="img-fluid" alt="" />
               </div>
