--- a/index.html
+++ b/index.html
@@ -330,36 +330,35 @@
     ============================-->
     <section id="sponsors" class="section-with-bg wow fadeInUp">
         <div class="container">
-          <div class="section-header">
-            <h2>Sponsors</h2>
-          </div>
-          <div class="row">
-            <div class="col-lg-2">
-              <div class="sponsor-logo">
-                <img src="img/sponsors/uh2c-fst.png" class="img-fluid" alt="" />
-              </div>
+            <div class="section-header">
+              <h2>Sponsors</h2>
             </div>
-            <div class="col-lg-2">
-              <div class="sponsor-logo">
-                <img src="img/sponsors/QCRI.png" class="img-fluid" alt="" />
-              </div>
+            <div class="container text-center my-3">
+                <div id="recipeCarousel" class="carousel slide w-100" data-ride="carousel">
+                    <div class="carousel-inner w-100" role="listbox">
+                        <div class="carousel-item row no-gutters active">
+                            <div class="col-3 float-left"><img class="img-fluid" src="img/sponsors/uh2c-fst.png"></div>
+                            <div class="col-3 float-left"><img class="img-fluid" src="img/sponsors/QCRI.png"></div>
+                            <div class="col-3 float-left"><img class="img-fluid" src="img/sponsors/cnrst.png"></div>
+                            <div class="col-3 float-left"><img class="img-fluid" src="img/sponsors/indaba-black.png"></div>
+                        </div>
+                        <div class="carousel-item row no-gutters">
+                            <div class="col-3 float-left"><img class="img-fluid" src="img/sponsors/logo-itinnov.png"></div>
+                            <div class="col-3 float-left"><img class="img-fluid" src="img/sponsors/uh2c-fst.png"></div>
+                            <div class="col-3 float-left"><img class="img-fluid" src="img/sponsors/QCRI.png"></div>
+                            <div class="col-3 float-left"><img class="img-fluid" src="img/sponsors/indaba-black.png"></div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#recipeCarousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#recipeCarousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
             </div>
-            <div class="col-lg-2">
-              <div class="sponsor-logo">
-                <img src="img/sponsors/logo-itinnov.png" class="img-fluid" alt="" />
-              </div>
-            </div>
-            <div class="col-lg-2">
-              <div class="sponsor-logo">
-                <img src="img/sponsors/indaba-black.png" class="img-fluid" alt="" />
-              </div>
-            </div>
-            <div class="col-lg-2">
-              <div class="sponsor-logo">
-                <img src="img/sponsors/cnrst.png" class="img-fluid" alt="" />
-              </div>
-            </div>
-          </div>
         </div>
       </section>
     
