--- a/pages/calls/3mt.html
+++ b/pages/calls/3mt.html
@@ -187,9 +187,9 @@
                   <div class="section-header">
                     <h2>
                       <a
-                        href="https://goo.gl/forms/YQxprQZ6lNxahFlg2"
+                        href="#"
                         class="btn btn-outline-primary btn-lg"
-                        >Submit a Summary</a
+                        ><strike>Submit a Summary</strike></a
                       >
                     </h2>
                   </div>
