--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                                 </p>
                               </div>
                               <div class="news-content">
-                                   <p> The Call for Demos is now open </p>
+                                   <p> The Call for Demos is now open. Submit before April 7, 2019. </p>
                               </div>
                           </div>  
                           
