--- a/index.html
+++ b/index.html
@@ -343,9 +343,9 @@
                                </div>
 
                             <div class="row schedule-item">
-                                <div class="col-md-5"><time>March 24, 2019</time></div>
+                                <div class="col-md-5"><time><strike>March 24, 2019</strike></time></div>
                                 <div class="col-md-7">
-                                  <h4>Call for 3MT</h4>
+                                  <h4><strike>Call for 3MT</strike></h4>
                                   <p> </p>
                                 </div>
                              </div>
