--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                              </div>
 
                              <div class="row schedule-item">
-                                <div class="col-md-5"><time>TBA</time></div>
+                                <div class="col-md-5"><time>April 7, 2019</time></div>
                                 <div class="col-md-7">
                                   <h4>Call for Demos</h4>
                                   <p> </p>
