--- a/pages/application.html
+++ b/pages/application.html
@@ -184,7 +184,7 @@
                         <h3>
                         Data Challenge
                         </h3>
-                        <p>Test your ML skills on a real-case problem and won your ticket to attend IndabaX Morocco.</p>
+                        <p>Test your ML skills on a real-case problem and win your ticket to attend IndabaX Morocco.</p>
                     </center>
                   </div>
                   <div class="section-content">
