--- a/pages/event/keynotes.html
+++ b/pages/event/keynotes.html
@@ -177,6 +177,48 @@
           <div class="row">
             <div class="col-md-3">
               <img
+                class="rounded-circle"
+                src="../../img/speakers/mounir.jpg"
+                alt="Mounir Ghogho"
+              />
+            </div>
+            <div class="col-md-9">
+              <div class="details">
+                <h1>Mounir Ghogho</h1>
+                <h2>International University of Rabat (UIR), Morocco</h2>
+                <p>
+                  Pr. Mounir Ghogho received his MSc degree in 1993 and PhD degree
+                  in 1997 from the National Polytechnic Institute of Toulouse,
+                  France. He was an EPSRC Research Fellow with the University of
+                  Strathclyde (Scotland), from Sept 1997 to Nov 2001. In
+                  December 2001, he joined the University of Leeds where he was
+                  promoted to full Professor in 2008. In 2010, while remaining
+                  affiliated with the University of Leeds, he joined the
+                  International University of Rabat in 2010, where he is
+                  currently Scientific Advisor to the President and Director of
+                  IT Research Laboratory (TICLab). He served as Dean of UIR’s
+                  Faculty of computer science and logistics in 2013. He is also
+                  currently Director of CNRS-Associated International Lab (LIA)
+                  DATANET, in the field of Big Data. He was elevated to the
+                  grade of IEEE Fellow in 2018, a recipient of the 2013 IBM
+                  Faculty Award and a recipient of the 2000 UK Royal Academy of
+                  Engineering Research Fellowship. His research interests are in
+                  signal processing, machine learning (artificial intelligence),
+                  Big data, and wireless communication. He is currently a member
+                  of the steering committee of the Transactions of Signal and
+                  Information Processing. In the past, he served as an Associate
+                  Editor of many journals including IEEE Signal Processing
+                  Magazine and IEEE Transactions on Signal Processing, and a
+                  member of IEEE Signal Processing Society SPCOM, SPTM and SAM
+                  Technical Committees.
+                </p>
+              </div>
+            </div>
+          </div>
+          
+          <div class="row">
+            <div class="col-md-3">
+              <img
                 src="../../img/speakers/hicham.jpeg"
                 alt="Hicham Zmarrou"
                 class="rounded-circle"
