--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="intro-container wow fadeIn">
       <img src="img/ai-and-machine-learning.png" style="width: 20%">
       <h1 class="mb-4 pb-0">DEEP LEARNING <br><span class="up">IndabaX Morocco </span> </h1>
-      <p class="mb-4 pb-0">April 29-30, 2019 <br> University of Hassan II Casablanca<br> Faculty of Sciences and Techniques (FST) of Mohammedia<br> </p>
+      <p class="mb-4 pb-0">April 29-30, 2019 <br> Hassan II University of Casablanca <br> Faculty of Sciences and Techniques (FST) of Mohammedia<br> </p>
       <!--<a href="#about" class="about-btn scrollto">About The Event</a>-->
       <p>
         <a href="./pages/application.html" class="about-btn scrollto">Apply Now!</a>
