--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                              </div>
 
                              <div class="row schedule-item">
-                                <div class="col-md-5"><time>TBA</time></div>
+                                <div class="col-md-5"><time>April 21, 2019</time></div>
                                 <div class="col-md-7">
                                   <h4>Call for Data Challenge</h4>
                                   <p> </p>
