--- a/pages/event/committees.html
+++ b/pages/event/committees.html
@@ -334,6 +334,10 @@
                 <td>Hassan II University, Morocco </td>
               </tr>
               <tr>
+                <td>Oum Elkhir Abra </td>
+                <td>CRMEF, Morocco </td>
+              </tr>   
+              <tr>
                 <td>Ounsa Roudies</td>
                 <td>Mohammed V University, Morocco </td>
               </tr>            
@@ -341,6 +345,10 @@
                 <td>Raja ElAssali</td>
                 <td>Caddi Ayad University, Morocco </td>
               </tr>
+              <tr>
+                <td>Raddouane Chiheb</td>
+                <td>ENSIAS, Mohammed V University, Morocco </td>
+              </tr>            
               <tr>
                 <td>Redouane Lguensat</td>
                 <td>Grenoble Alpes University, France </td>
