--- a/index.html
+++ b/index.html
@@ -280,12 +280,20 @@
                                     alt="Halima Bensmail"
                                   />  
                                 </a>
+                                <a href="./pages/event/keynotes.html">  
+                                  <img
+                                    class="rounded-circle"
+                                    width="60"
+                                    src="./img/speakers/mounir.jpg"
+                                    alt="Mounir Ghogho"
+                                  />  
+                                </a>
                                 <a href="./pages/event/keynotes.html"> 
                                   <img
                                     class="rounded-circle"
                                     width="60"
                                     src="./img/speakers/hicham.jpeg"
-                                    alt="Halima Bensmail"
+                                    alt="Hicham Zmarrou"
                                   /> 
                                 </a>
                                   <a href="./pages/event/keynotes.html"> 
@@ -293,7 +301,7 @@
                                     class="rounded-circle"
                                     width="60"
                                     src="./img/speakers/loubna.jpg"
-                                    alt="Halima Bensmail"
+                                    alt="Loubna Bnabbou Bensmail"
                                   /> 
                                 </a>
                                 </p>
