--- a/index.html
+++ b/index.html
@@ -392,9 +392,9 @@
                              </div>
 
                              <div class="row schedule-item">
-                                <div class="col-md-5"><time>April 7, 2019</time></div>
+                                <div class="col-md-5"><time><strike>April 7, 2019</strike></time></div>
                                 <div class="col-md-7">
-                                  <h4>Call for Demos</h4>
+                                  <h4><strike>Call for Demos</strike></h4>
                                   <p> </p>
                                 </div>
                              </div>
